MINIC/MiniC.output
State 82 conflicts: 1 shift/reduce


Grammar

    0 $accept: compileUnit $end

    1 compileUnit: statement
    2            | compileUnit statement
    3            | functionDef
    4            | compileUnit functionDef

    5 functionDef: FUNCTION IDENTIFIER '(' fargs ')' compoundStatement
    6            | FUNCTION IDENTIFIER '(' ')' compoundStatement

    7 fargs: IDENTIFIER
    8      | fargs ',' IDENTIFIER

    9 statement: expression ';'
   10          | compoundStatement
   11          | ifStatement
   12          | whileStatement
   13          | RETURN expression ';'
   14          | BREAK ';'
   15          | ';'

   16 compoundStatement: '{' '}'
   17                  | '{' statementList '}'

   18 ifStatement: IF '(' expression ')' statement
   19            | IF '(' expression ')' statement ELSE statement

   20 whileStatement: WHILE '(' expression ')' statement

   21 statementList: statement
   22              | statementList statement

   23 expression: NUMBER
   24           | IDENTIFIER
   25           | IDENTIFIER '(' ')'
   26           | IDENTIFIER '(' args ')'
   27           | '(' expression ')'
   28           | IDENTIFIER '=' expression
   29           | expression '+' expression
   30           | expression '-' expression
   31           | expression '*' expression
   32           | expression '/' expression
   33           | '+' expression
   34           | '-' expression
   35           | NOT expression
   36           | expression AND expression
   37           | expression OR expression
   38           | expression NEQUAL expression
   39           | expression EQUAL expression
   40           | expression LT expression
   41           | expression GT expression
   42           | expression GTE expression
   43           | expression LTE expression

   44 args: expression
   45     | args ',' expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 5 6 18 19 20 25 26 27
')' (41) 5 6 18 19 20 25 26 27
'*' (42) 31
'+' (43) 29 33
',' (44) 8 45
'-' (45) 30 34
'/' (47) 32
';' (59) 9 13 14 15
'=' (61) 28
'{' (123) 16 17
'}' (125) 16 17
error (256)
NUMBER (258) 23
IDENTIFIER (259) 5 6 7 8 24 25 26 28
IF (260) 18 19
ELSE (261) 19
WHILE (262) 20
RETURN (263) 13
BREAK (264) 14
FUNCTION (265) 5 6
OR (266) 37
AND (267) 36
NOT (268) 35
LT (269) 40
LTE (270) 43
GT (271) 41
GTE (272) 42
EQUAL (273) 39
NEQUAL (274) 38


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
compileUnit (32)
    on left: 1 2 3 4, on right: 0 2 4
functionDef (33)
    on left: 5 6, on right: 3 4
fargs (34)
    on left: 7 8, on right: 5 8
statement (35)
    on left: 9 10 11 12 13 14 15, on right: 1 2 18 19 20 21 22
compoundStatement (36)
    on left: 16 17, on right: 5 6 10
ifStatement (37)
    on left: 18 19, on right: 11
whileStatement (38)
    on left: 20, on right: 12
statementList (39)
    on left: 21 22, on right: 17 22
expression (40)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42 43, on right: 9 13 18 19 20 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43 44 45
args (41)
    on left: 44 45, on right: 26 45


State 0

    0 $accept: . compileUnit $end

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    IF          shift, and go to state 3
    WHILE       shift, and go to state 4
    RETURN      shift, and go to state 5
    BREAK       shift, and go to state 6
    FUNCTION    shift, and go to state 7
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11
    ';'         shift, and go to state 12
    '{'         shift, and go to state 13

    compileUnit        go to state 14
    functionDef        go to state 15
    statement          go to state 16
    compoundStatement  go to state 17
    ifStatement        go to state 18
    whileStatement     go to state 19
    expression         go to state 20


State 1

   23 expression: NUMBER .

    $default  reduce using rule 23 (expression)


State 2

   24 expression: IDENTIFIER .
   25           | IDENTIFIER . '(' ')'
   26           | IDENTIFIER . '(' args ')'
   28           | IDENTIFIER . '=' expression

    '='  shift, and go to state 21
    '('  shift, and go to state 22

    $default  reduce using rule 24 (expression)


State 3

   18 ifStatement: IF . '(' expression ')' statement
   19            | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 23


State 4

   20 whileStatement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 24


State 5

   13 statement: RETURN . expression ';'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 25


State 6

   14 statement: BREAK . ';'

    ';'  shift, and go to state 26


State 7

    5 functionDef: FUNCTION . IDENTIFIER '(' fargs ')' compoundStatement
    6            | FUNCTION . IDENTIFIER '(' ')' compoundStatement

    IDENTIFIER  shift, and go to state 27


State 8

   33 expression: '+' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 28


State 9

   34 expression: '-' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 29


State 10

   35 expression: NOT . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 30


State 11

   27 expression: '(' . expression ')'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 31


State 12

   15 statement: ';' .

    $default  reduce using rule 15 (statement)


State 13

   16 compoundStatement: '{' . '}'
   17                  | '{' . statementList '}'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    IF          shift, and go to state 3
    WHILE       shift, and go to state 4
    RETURN      shift, and go to state 5
    BREAK       shift, and go to state 6
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11
    ';'         shift, and go to state 12
    '{'         shift, and go to state 13
    '}'         shift, and go to state 32

    statement          go to state 33
    compoundStatement  go to state 17
    ifStatement        go to state 18
    whileStatement     go to state 19
    statementList      go to state 34
    expression         go to state 20


State 14

    0 $accept: compileUnit . $end
    2 compileUnit: compileUnit . statement
    4            | compileUnit . functionDef

    $end        shift, and go to state 35
    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    IF          shift, and go to state 3
    WHILE       shift, and go to state 4
    RETURN      shift, and go to state 5
    BREAK       shift, and go to state 6
    FUNCTION    shift, and go to state 7
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11
    ';'         shift, and go to state 12
    '{'         shift, and go to state 13

    functionDef        go to state 36
    statement          go to state 37
    compoundStatement  go to state 17
    ifStatement        go to state 18
    whileStatement     go to state 19
    expression         go to state 20


State 15

    3 compileUnit: functionDef .

    $default  reduce using rule 3 (compileUnit)


State 16

    1 compileUnit: statement .

    $default  reduce using rule 1 (compileUnit)


State 17

   10 statement: compoundStatement .

    $default  reduce using rule 10 (statement)


State 18

   11 statement: ifStatement .

    $default  reduce using rule 11 (statement)


State 19

   12 statement: whileStatement .

    $default  reduce using rule 12 (statement)


State 20

    9 statement: expression . ';'
   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    OR      shift, and go to state 38
    AND     shift, and go to state 39
    '+'     shift, and go to state 40
    '-'     shift, and go to state 41
    '*'     shift, and go to state 42
    '/'     shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    EQUAL   shift, and go to state 48
    NEQUAL  shift, and go to state 49
    ';'     shift, and go to state 50


State 21

   28 expression: IDENTIFIER '=' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 51


State 22

   25 expression: IDENTIFIER '(' . ')'
   26           | IDENTIFIER '(' . args ')'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11
    ')'         shift, and go to state 52

    expression  go to state 53
    args        go to state 54


State 23

   18 ifStatement: IF '(' . expression ')' statement
   19            | IF '(' . expression ')' statement ELSE statement

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 55


State 24

   20 whileStatement: WHILE '(' . expression ')' statement

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 56


State 25

   13 statement: RETURN expression . ';'
   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    OR      shift, and go to state 38
    AND     shift, and go to state 39
    '+'     shift, and go to state 40
    '-'     shift, and go to state 41
    '*'     shift, and go to state 42
    '/'     shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    EQUAL   shift, and go to state 48
    NEQUAL  shift, and go to state 49
    ';'     shift, and go to state 57


State 26

   14 statement: BREAK ';' .

    $default  reduce using rule 14 (statement)


State 27

    5 functionDef: FUNCTION IDENTIFIER . '(' fargs ')' compoundStatement
    6            | FUNCTION IDENTIFIER . '(' ')' compoundStatement

    '('  shift, and go to state 58


State 28

   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   33           | '+' expression .
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    '*'     shift, and go to state 42
    '/'     shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    EQUAL   shift, and go to state 48
    NEQUAL  shift, and go to state 49

    $default  reduce using rule 33 (expression)


State 29

   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   34           | '-' expression .
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    '*'     shift, and go to state 42
    '/'     shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    EQUAL   shift, and go to state 48
    NEQUAL  shift, and go to state 49

    $default  reduce using rule 34 (expression)


State 30

   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   35           | NOT expression .
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    LT      error (nonassociative)
    LTE     error (nonassociative)
    GT      error (nonassociative)
    GTE     error (nonassociative)
    EQUAL   error (nonassociative)
    NEQUAL  error (nonassociative)

    $default  reduce using rule 35 (expression)


State 31

   27 expression: '(' expression . ')'
   29           | expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    OR      shift, and go to state 38
    AND     shift, and go to state 39
    '+'     shift, and go to state 40
    '-'     shift, and go to state 41
    '*'     shift, and go to state 42
    '/'     shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    EQUAL   shift, and go to state 48
    NEQUAL  shift, and go to state 49
    ')'     shift, and go to state 59


State 32

   16 compoundStatement: '{' '}' .

    $default  reduce using rule 16 (compoundStatement)


State 33

   21 statementList: statement .

    $default  reduce using rule 21 (statementList)


State 34

   17 compoundStatement: '{' statementList . '}'
   22 statementList: statementList . statement

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    IF          shift, and go to state 3
    WHILE       shift, and go to state 4
    RETURN      shift, and go to state 5
    BREAK       shift, and go to state 6
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11
    ';'         shift, and go to state 12
    '{'         shift, and go to state 13
    '}'         shift, and go to state 60

    statement          go to state 61
    compoundStatement  go to state 17
    ifStatement        go to state 18
    whileStatement     go to state 19
    expression         go to state 20


State 35

    0 $accept: compileUnit $end .

    $default  accept


State 36

    4 compileUnit: compileUnit functionDef .

    $default  reduce using rule 4 (compileUnit)


State 37

    2 compileUnit: compileUnit statement .

    $default  reduce using rule 2 (compileUnit)


State 38

   37 expression: expression OR . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 62


State 39

   36 expression: expression AND . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 63


State 40

   29 expression: expression '+' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 64


State 41

   30 expression: expression '-' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 65


State 42

   31 expression: expression '*' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 66


State 43

   32 expression: expression '/' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 67


State 44

   40 expression: expression LT . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 68


State 45

   43 expression: expression LTE . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 69


State 46

   41 expression: expression GT . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 70


State 47

   42 expression: expression GTE . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 71


State 48

   39 expression: expression EQUAL . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 72


State 49

   38 expression: expression NEQUAL . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 8
    '-'         shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 11

    expression  go to state 73


State 50

    9 statement: expression ';' .

    $default  reduce using rule 9 (statement)


State 51

   28 expression: IDENTIFIER '=' expression .
   29           | expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    OR      shift, and go to state 38
    AND     shift, and go to state 39
    '+'     shift, and go to state 40
    '-'     shift, and go to state 41
    '*'     shift, and go to state 42
    '/'     shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    EQUAL   shift, and go to state 48
    NEQUAL  shift, and go to state 49

    $default  reduce using rule 28 (expression)


State 52

   25 expression: IDENTIFIER '(' ')' .

    $default  reduce using rule 25 (expression)


State 53

   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression
   44 args: expression .

    OR      shift, and go to state 38
    AND     shift, and go to state 39
    '+'     shift, and go to state 40
    '-'     shift, and go to state 41
    '*'     shift, and go to state 42
    '/'     shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    EQUAL   shift, and go to state 48
    NEQUAL  shift, and go to state 49

    $default  reduce using rule 44 (args)


State 54

   26 expression: IDENTIFIER '(' args . ')'
   45 args: args . ',' expression

    ')'  shift, and go to state 74
    ','  shift, and go to state 75


State 55

   18 ifStatement: IF '(' expression . ')' statement
   19            | IF '(' expression . ')' statement ELSE statement
   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    OR      shift, and go to state 38
    AND     shift, and go to state 39
    '+'     shift, and go to state 40
    '-'     shift, and go to state 41
    '*'     shift, and go to state 42
    '/'     shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    EQUAL   shift, and go to state 48
    NEQUAL  shift, and go to state 49
    ')'     shift, and go to state 76


State 56

   20 whileStatement: WHILE '(' expression . ')' statement
   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    OR      shift, and go to state 38
    AND     shift, and go to state 39
    '+'     shift, and go to state 40
    '-'     shift, and go to state 41
    '*'     shift, and go to state 42
    '/'     shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    EQUAL   shift, and go to state 48
    NEQUAL  shift, and go to state 49
    ')'     shift, and go to state 77


State 57

   13 statement: RETURN expression ';' .

    $default  reduce using rule 13 (statement)


State 58

    5 functionDef: FUNCTION IDENTIFIER '(' . fargs ')' compoundStatement
    6            | FUNCTION IDENTIFIER '(' . ')' compoundStatement

    IDENTIFIER  shift, and go to state 78
    ')'         shift, and go to state 79

    fargs  go to state 80


State 59

   27 expression: '(' expression ')' .

    $default  reduce using rule 27 (expression)


State 60

   17 compoundStatement: '{' statementList '}' .

    $default  reduce using rule 17 (compoundStatement)


State 61

   22 statementList: statementList statement .

    $default  reduce using rule 22 (statementList)


State 62

   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   36           | expression . AND expression
   37           | expression . OR expression
   37           | expression OR expression .
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    AND     shift, and go to state 39
    '+'     shift, and go to state 40
    '-'     shift, and go to state 41
    '*'     shift, and go to state 42
    '/'     shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    EQUAL   shift, and go to state 48
    NEQUAL  shift, and go to state 49

    $default  reduce using rule 37 (expression)


State 63

   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   36           | expression . AND expression
   36           | expression AND expression .
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    '+'     shift, and go to state 40
    '-'     shift, and go to state 41
    '*'     shift, and go to state 42
    '/'     shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    EQUAL   shift, and go to state 48
    NEQUAL  shift, and go to state 49

    $default  reduce using rule 36 (expression)


State 64

   29 expression: expression . '+' expression
   29           | expression '+' expression .
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    '*'     shift, and go to state 42
    '/'     shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    EQUAL   shift, and go to state 48
    NEQUAL  shift, and go to state 49

    $default  reduce using rule 29 (expression)


State 65

   29 expression: expression . '+' expression
   30           | expression . '-' expression
   30           | expression '-' expression .
   31           | expression . '*' expression
   32           | expression . '/' expression
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    '*'     shift, and go to state 42
    '/'     shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    EQUAL   shift, and go to state 48
    NEQUAL  shift, and go to state 49

    $default  reduce using rule 30 (expression)


State 66

   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   31           | expression '*' expression .
   32           | expression . '/' expression
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    EQUAL   shift, and go to state 48
    NEQUAL  shift, and go to state 49

    $default  reduce using rule 31 (expression)


State 67

   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   32           | expression '/' expression .
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    EQUAL   shift, and go to state 48
    NEQUAL  shift, and go to state 49

    $default  reduce using rule 32 (expression)


State 68

   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   40           | expression LT expression .
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression

    LT      error (nonassociative)
    LTE     error (nonassociative)
    GT      error (nonassociative)
    GTE     error (nonassociative)
    EQUAL   error (nonassociative)
    NEQUAL  error (nonassociative)

    $default  reduce using rule 40 (expression)


State 69

   29 expression: expression . '+' expression
   30           | expression . '-' expression
   31           | expression . '*' expression
   32           | expression . '/' expression
   36           | expression . AND expression
   37           | expression . OR expression
   38           | expression . NEQUAL expression
   39           | expression . EQUAL expression
   40           | expression . LT expression
   41           | expression . GT expression
   42           | expression . GTE expression
   43           | expression . LTE expression
   43           | expression LTE expression .
